app/assets/stylesheets/components/_navbar.scss
/* Main navbar */
.navbar-wagon {
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
  background: linear-gradient(black,rgba(54, 56, 61, 1));
  transition: all 0.3s ease;
  height: 70px;
  padding: 0px 30px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  position: sticky !important;
  top: 0px;
  z-index: 1;
}

/* Logo */
.navbar-wagon-brand {
  height: 50px;

}

/* User Avatar */
.navbar-wagon .avatar {
  height: 35px;
  width: 35px;
  border-radius: 50%;
}

/* Right section */
.navbar-wagon-right {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

/* Basic navbar item */
.navbar-wagon-item {
  cursor: pointer;
  padding: 0 20px;
}

/* Navbar link */
.navbar-wagon-link {
  color: $grey-typo;
  font-family: $body-font;
  font-weight: normal;
  font-size: 14px;
}
.navbar-wagon-link:hover {
  color: $red-btn;
  text-decoration: none;
}

/* Dropdown menu */
.navbar-wagon-dropdown-menu {
  margin-top: 15px;
  box-shadow: 1px 1px 4px #E6E6E6;
  border-color: #E6E6E6;
}
.navbar-wagon-dropdown-menu li > a {
  transition: color 0.3s ease;
  font-weight: bold !important;
  color: white !important;
  font-size: 15px !important;
  line-height: 22px !important;
  padding: 10px 20px;
  border-top: 1px solid rgba(60, 60, 60, 1);
  border-bottom: 1px solid rgba(35, 35, 35, 1);
}
.navbar-wagon-dropdown-menu li > a:hover {
  background-color:  rgba(66, 66, 66, 1) !important;
  color: blue-future !important;
}
.navbar-wagon-dropdown-menu:before {
  content: ' ';
  height: 10px;
  width: 10px;
  position: absolute;
  right: 10px;
  top: -6px;
  background-color: rgba(40, 40, 40, 1);
  transform: rotate(45deg);
  border-left: 1px solid white;
  border-top: 1px solid white;
}

.dropdown-menu.dropdown-menu-right.navbar-wagon-dropdown-menu {
  background-color: rgba(40, 40, 40, 1);
  border-radius: 0px!important;
}

.dropdown-menu.dropdown-menu-right.navbar-wagon-dropdown-menu:before {
  background-color: rgba(40, 40, 40, 1);
}

.fa-bars {
  color: white;
}

